--- a/Sentiment Analysis(bert-and-roberta-for-text-classification).ipynb
+++ b/Sentiment Analysis(bert-and-roberta-for-text-classification).ipynb
@@ -970,9 +970,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- RoBERTa: https://colab.research.google.com/github/DhavalTaunk08/NLP_scripts/blob/master/sentiment_analysis_using_roberta.ipynb#scrollTo=mhqvtY2SIup7\n",
-    "- Bert:https://medium.com/@khang.pham.exxact/text-classification-with-bert-7afaacc5e49b"
-   ]
+    "- RoBERTa: https://colab.research.google.com/github/DhavalTaunk08/NLP_scripts/blob/master/sentiment_analysis_using_roberta.ipynb#scrollTo=mhqvtY2SIup7\n",   ]
   },
   {
    "cell_type": "code",
